Name: git-annex
Version: 3.20120405
Cabal-Version: >= 1.8
License: GPL
Maintainer: Joey Hess <joey@kitenet.net>
Author: Joey Hess
Stability: Stable
Copyright: 2010-2012 Joey Hess
License-File: GPL
Extra-Source-Files: use-make-sdist-instead
Homepage: http://git-annex.branchable.com/
Build-type: Custom
Category: Utility
Synopsis: manage files with git, without checking their contents into git
Description:
 git-annex allows managing files with git, without checking the file
 contents into git. While that may seem paradoxical, it is useful when
 dealing with files larger than git can currently easily handle, whether due
 to limitations in memory, time, or disk space.
 .
 Even without file content tracking, being able to manage files with git,
 move files around and delete files with versioned directory trees, and use
 branches and distributed clones, are all very handy reasons to use git. And
 annexed files can co-exist in the same git repository with regularly
 versioned files, which is convenient for maintaining documents, Makefiles,
 etc that are associated with annexed files but that benefit from full
 revision control.

Executable git-annex
  Main-Is: git-annex.hs
  Build-Depends: MissingH, hslogger, directory, filepath,
   unix, containers, utf8-string, network, mtl, bytestring, old-locale, time,
   pcre-light, extensible-exceptions, dataenc, SHA, process, hS3, json, HTTP,
   base >= 4.5, base < 5, monad-control, transformers-base, lifted-base,
   IfElse, text, QuickCheck >= 2.1, bloomfilter
  Other-Modules: Utility.Touch
  C-Sources: Utility/diskfree.c

Executable git-annex-shell
  Main-Is: git-annex-shell.hs
  C-Sources: Utility/diskfree.c

Test-Suite test
  Type: exitcode-stdio-1.0
  Main-Is: test.hs
  Build-Depends: testpack, HUnit
  C-Sources: Utility/diskfree.c

source-repository head
  type: git
  location: git://git-annex.branchable.com/
